# api-compat

./: README.md  api-compat.cabal
examples/: diagrams-core-0.4.api  diagrams-core-0.5.1.api  diagrams-core.api.diff  diagrams-lib-0.5.1.api  template-haskell-2.7.0.0.api  template-haskell-2.8.0.0.api  template-haskell.api.diff
src/ApiCompat/: GetApi.hs  GhcApi.hs  ShowInfo.hs
